<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="txtDescription">Conjunction (AND)</string>
    <string name="txtA">A</string>
    <string name="txtB">B</string>
    <string name="txtAB">A ^ B</string>
    <string name="txtTrue">T</string>
    <string name="txtFalse">F</string>
    <string name="txtSubmit">Submit</string>
    <string name="txtCorrect">Correct</string>
    <string name="txtIncorrect">InCorrect</string>


</resources>